--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,18 @@
     "lint": "eslint src --ext ts,tsx"
   },
   "dependencies": {
+    "@material-tailwind/react": "2.1.10",
     "@tanstack/react-query": "^5.90.12",
     "framer-motion": "^12.23.26",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-router-dom": "^6.28.0",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
@@ -32,5 +33,9 @@
     "tailwindcss": "^4.1.18",
     "typescript": "^5.5.3",
     "vite": "^7.2.6"
+  },
+  "overrides": {
+  "react": "18.2.0",
+  "react-dom": "18.2.0"
   }
 }
