--- a/backend-booking-api/src/main/resources/application.yaml
+++ b/backend-booking-api/src/main/resources/application.yaml
@@ -1,12 +1,10 @@
-# Spring Boot configuration
 spring:
   application:
     name: backend-booking-api
-  datasource:
-    url: jdbc:h2:mem:bookingdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
+
+  profiles:
+    active: postgres
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -14,10 +12,12 @@ spring:
     properties:
       hibernate:
         format_sql: true
-  h2:
-    console:
+
+  graphql:
+    path: /graphql
+    graphiql:
       enabled: true
-      path: /h2-console
+      path: /graphiql
 
 server:
   port: 8080
